--- a/website/index.html
+++ b/website/index.html
@@ -22,12 +22,11 @@
     <link rel="stylesheet" href="/static/style.css">
 
     <title>wooripool</title>
-
 </head>
 
 <body>
 
-<header>
+<header style="background-color:white;">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal">
 
         <a class="pure-menu-heading hot-swapper" href="/"><i class="fa fa-home"></i>&nbsp;wooripool</a>
