--- a/website/pages/getting_started.html
+++ b/website/pages/getting_started.html
@@ -182,7 +182,7 @@
 
 <div id="holder">
 
-    <div id="menu">
+    <!-- <div id="menu">
 
         {{? (function(){
                 if (!it.portalConfig.switching) return false;
@@ -224,7 +224,7 @@
             <a href="#" class="poolOption" data-info="{{=info}}">{{=pool}}</a>
             {{ } }}
         </div>
-    </div>
+    </div> -->
 
     <div id="main">
         <a href="#" class="miningOption" id="nompAppDownload">
